# tkipw

./: .gitignore  CHANGELOG.md  NOTICE  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
examples/: altair_demo.py  bokeh_demo.py  bqplot_demo.py  ipycanvas_demo.py  ipyleaflet_demo.py  ipympl_demo.py  pillow_demo.py  playground.py  plotly_demo.py
js/: build.mjs  package-lock.json  package.json
js/src/: index.js
scripts/: run-linux-ci-tests.sh  run-macos-ci-tests.sh  run-windows-ci-tests.sh
src/tkipw/: __init__.py  app.py  comm_backend.py  display_mode.py  html_host.py  jupyter.py  manager.py  output.py  protocol.py
src/tkipw/extensions/: __init__.py  altair.py  bokeh.py  folium.py  matplotlib.py  pillow.py  pyvista.py
tests/: conftest.py
tests/e2e/: __init__.py  conftest.py  helpers.py  test_extensions.py  test_webview.py
tests/support/: __init__.py  fakes.py
tests/unit/: test_app_shell.py  test_display_mode.py  test_download.py  test_extensions.py  test_html_host.py  test_jupyter.py  test_lifecycle.py  test_output.py  test_playground.py  test_protocol.py  test_when_ready.py
